<resources>
    <!-- -->
    <string name="app_name">Playin</string>
    <string name="api_key_map">AIzaSyCQgOxPWXRzwka4wkKTQOUjLWADlXRA8dI</string>
    <string name="facebook_app_id">387133905136380</string>
    <string name="fb_login_protocol_scheme">fb387133905136380</string>

    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="enter_facebook">Enter with Facebook</string>
    <string name="enter_email">Enter with Email</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Use</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_pass_question">Forgot Password?</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forgot_pass_instruction">Please enter your email address and we will send you a code to reset your password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="update_pass">Update Password</string>
    <string name="submit">Submit</string>
    <string name="start_with_fb">Start with Facebook</string>
    <string name="start_with_email">Start with Email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="personal_details">Personal Details</string>
    <string name="personal_details_instruction">Enter the details below and continue.</string>
    <string name="name">Name</string>
    <string name="password_instruction">Must be at least 8 characters, include special characters and numbers.</string>
    <string name="continue_button">Continue</string>
    <string name="player_details">Player Details</string>
    <string name="player_details_instruction">This information will help us personalize the experience and offer you the right games.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="coed">Co-ed</string>
    <string name="invite_phone_contacts">Invite phone contacts</string>
    <string name="sms_instruction">Playin will send SMS to each of player of the selected below. Additional Charges may apply.</string>
    <string name="search_contact">Search Contact</string>
    <string name="create_location">Create Location</string>
    <string name="save">Save</string>
    <string name="enter_location_name">Enter Location Name</string>


    <!--Level-->
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="good">Good</string>
    <string name="competitive">Competitive</string>
    <string name="experience_level">What is your experience level?</string>
    <string name="all">All</string>
    <!--Sport type-->
    <string name="sport_play_most">Which sport you play most?</string>
    <string name="football">Football</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>

    <!--Textview as a button green general-->
    <string name="invite_player">Invite Player</string>
    <string name="invite_recent_player">Invite Recent Players</string>
    <string name="recent_player_ins">Playin will send notification to each of the selected people below.</string>
    <string name="start_game">Start Game</string>
    <string name="end_game">End Game</string>
    <string name="join_game">Join Game</string>
    <!--Lobby Map-->
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="create_a_game">Create Game</string>
    <!--Dialog-->
    <string name="edit_game_details">Edit Game Details</string>
    <string name="change_ownership">Change Ownership</string>
    <string name="view_profile">View Profile</string>
    <string name="resend_invitation">Re-send Invitation</string>
    <string name="cancel_invitation">Cancel Invitation</string>

    <!--Tags/Badge-->
    <string name="tag_in">  in  </string>
    <string name="tag_organizer">organizer</string>
    <string name="tag_coed">co-ed</string>
    <string name="tag_soon">soon</string>
    <string name="tag_public">public</string>

    <!--Create Game-->
    <string name="create_game_part_two">Create Game 2/2</string>
    <string name="max_player">Maximum Players</string>
    <string name="level">Level</string>
    <string name="secondary_text">This information will help us notify the right people for your game.</string>
    <string name="privacy_secondary_text">Public games are open for anybody to join. Private games are visible only to you and invited friends.</string>
    <string name="privacy">Privacy</string>
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="description">Description</string>
    <string name="description_hint">Add any additional info, links, numbers...</string>
    <!--Shared Preference-->
    <string name="sharedPreferenceName">Playin</string>
    <string name="sp_personal_details">PersonalDetails</string>
    <!--Demo-->
    <string name="select_a_player">Select a player below to transfer the ownership of the game to. After that you will not be able to manage the game details and players.</string>


</resources>
