<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/personalDetailsCon"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:visibility="visible">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/personal_details"
        android:textSize="22sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/personalDetailsHeadline"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personalDetailsHeadline"
        android:text="@string/personal_details_instruction"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:id="@+id/persIns"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/persIns"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:id="@+id/nameInput"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/nameInput"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/emailSignup"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/emailSignup"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/passSignup"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_instruction"
        android:id="@+id/passInstruction"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="@dimen/lowest_textview_size"
        android:gravity="center"
        android:layout_below="@id/passSignup"
        android:textColor="@color/general_text_secondary"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"/>
    <TextView
        style="@style/LoginButtonStyle"
        android:layout_below="@id/passInstruction"
        android:text="@string/continue_button"
        android:id="@+id/loginSubmit"
        android:onClick="Continue" />

</RelativeLayout>