<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginResetCon"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/forgot_password"
        android:textSize="22sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/forgotPassResetHeadline"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_instruction"
        android:gravity="center"
        android:textSize="@dimen/secondary_textview_size"
        android:textColor="@color/general_text_secondary"
        android:fontFamily="@font/open_sans_regular"
        android:id="@+id/resetInstruction"
        android:layout_below="@id/forgotPassResetHeadline"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/resetInstruction"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:id="@+id/emailInputReset"/>
    <TextView
        style="@style/LoginButtonStyle"
        android:layout_below="@id/emailInputReset"
        android:text="@string/submit"
        android:id="@+id/resetSubmit"
        android:onClick="ResetSubmit"
        />
</RelativeLayout>