<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginNewPassCon"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/new_password"
        android:textSize="22sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/newPass"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/newPass"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password"
        android:id="@+id/newPassInput"/>
    <EditText
        style="@style/LoginEdittext"
        android:layout_below="@id/newPassInput"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_new_pass"
        android:id="@+id/confirmPasswordInput"/>
    <TextView
        style="@style/LoginButtonStyle"
        android:layout_below="@id/confirmPasswordInput"
        android:text="@string/update_pass"
        android:gravity="center"
        android:id="@+id/updatepass"
        android:onClick="UpdatePassword"
        android:clickable="true"
        android:focusable="true" />

</RelativeLayout>