<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/playerDetailsCon"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:visibility="visible">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/player_details"
        android:textSize="22sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/playerDetailsHeadline"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerDetailsHeadline"
        android:text="@string/player_details_instruction"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:textSize="@dimen/lowest_textview_size"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:id="@+id/playerIns"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerIns"
            android:id="@+id/sportTypeCon"
            android:layout_marginTop="10dp">
            <TextView
                style="@style/playerDetailSectionHeadlineTextview"
                android:text="@string/sport_play_most"
                android:id="@+id/sportYouPlayMostHeadline"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/default_margin_player_details"
                android:layout_below="@id/sportYouPlayMostHeadline"
                android:weightSum="3"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/unselected_button_right_have_straight_line"
                    android:id="@+id/basketball"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="BasketBallPressed">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/basketball"
                        android:layout_centerInParent="true"
                        android:id="@+id/basketballIcon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basketball"
                        android:textColor="@color/white"
                        android:fontFamily="@font/open_sans_bold"
                        android:textSize="@dimen/lowest_textview_size"
                        android:layout_below="@id/basketballIcon"
                        android:layout_centerHorizontal="true"

                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/unselected_middle_button_with_no_radius"
                    android:id="@+id/football"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="FootballPressed">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/cricket_placeholder"
                        android:layout_centerInParent="true"
                        android:id="@+id/footballIcon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/football"
                        android:textColor="@color/white"
                        android:fontFamily="@font/open_sans_bold"
                        android:textSize="@dimen/lowest_textview_size"
                        android:layout_below="@id/footballIcon"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/unselected_button_left_have_straight_line"
                    android:id="@+id/soccer"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="SoccerPressed">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/football"
                        android:layout_centerInParent="true"
                        android:id="@+id/soccerIcon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soccer"
                        android:textColor="@color/white"
                        android:fontFamily="@font/open_sans_bold"
                        android:textSize="@dimen/lowest_textview_size"
                        android:layout_below="@id/soccerIcon"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/experienceLevelCon"
        android:layout_below="@id/sportTypeCon"
        android:layout_marginTop="10dp">
        <TextView
            style="@style/playerDetailSectionHeadlineTextview"
            android:text="@string/experience_level"
            android:id="@+id/experienceLevelHeadline"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_details_button_container_height_small_button"
            android:layout_marginTop="@dimen/default_margin_player_details"
            android:layout_marginLeft="@dimen/default_margin_player_details"
            android:layout_marginRight="@dimen/default_margin_player_details"
            android:id="@+id/levelFirstPart"
            android:layout_below="@id/experienceLevelHeadline"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/beginner"
                android:id="@+id/beginnerLevel"
                android:background="@drawable/unselected_button_right_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="BeginnerPressed"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/intermediate"
                android:id="@+id/intermediateLevel"
                android:background="@drawable/unselected_button_left_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="IntermediatePressed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_details_button_container_height_small_button"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/default_margin_player_details"
            android:layout_marginRight="@dimen/default_margin_player_details"
            android:layout_below="@id/levelFirstPart"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/good"
                android:id="@+id/goodLevel"
                android:background="@drawable/unselected_button_right_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="GoodPressed"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/competitive"
                android:id="@+id/competitiveLevel"
                android:background="@drawable/unselected_button_left_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="CompetitivePressed"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genderCon"
        android:layout_below="@id/experienceLevelCon"
        android:layout_marginTop="30dp">

        <TextView
            style="@style/playerDetailSectionHeadlineTextview"
            android:text="@string/gender"
            android:id="@+id/genderHeadline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_details_button_container_height_small_button"
            android:layout_below="@id/genderHeadline"
            android:layout_margin="@dimen/default_margin_player_details"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"
                android:id="@+id/maleGender"
                android:background="@drawable/unselected_button_right_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="MalePressed"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"
                android:id="@+id/femaleGender"
                android:background="@drawable/unselected_button_left_have_straight_line"
                style="@style/playerDetailsButtonTextview"
                android:onClick="FemalePressed"/>
        </LinearLayout>

    </RelativeLayout>
    <TextView
        style="@style/LoginButtonStyle"
        android:layout_below="@id/genderCon"
        android:text="@string/create_account"
        android:id="@+id/loginSubmit"
        android:onClick="CreateAccount"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"/>

</RelativeLayout>