<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/TextView_Primary_Bold_Black"
            android:text="@string/edit_game_details"
            android:id="@+id/EditGameDetails"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true"
             />
        <TextView
            style="@style/TextView_Primary_Bold_Black"
            android:text="@string/change_ownership"
            android:id="@+id/ChangeOwnerShip"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            style="@style/TextView_Primary_Bold_Different_Color"
            android:text="@string/cancel"
            android:id="@+id/cancelEditBottomPopUp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>