<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <RelativeLayout
        style="@style/Toolbar_Custom"
        android:id="@+id/smsToolbar">
        <RelativeLayout
            style="@style/Toolbar_Navigation_RelativeLayout_Property"
            android:onClick="Previous">
            <ImageView
                style="@style/Toolbar_Icon_Properties"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:onClick="Previous"/>
        </RelativeLayout>
        <TextView
            style="@style/TextView_Primary_Bold_Different_Color"
            android:layout_centerInParent="true"
            android:text="@string/invite_phone_contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/headline_textview_size" />

        <RelativeLayout
            style="@style/Toolbar_Navigation_RelativeLayout_Property"
            android:onClick="Search"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <ImageView
                style="@style/Toolbar_Icon_Properties"
                android:src="@drawable/ic_search_white_24dp"
                android:onClick="Search"/>
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_instruction"
        android:id="@+id/smsInstruction"
        android:layout_below="@id/smsToolbar"
        android:textColor="@color/general_text_secondary"
        android:textSize="@dimen/secondary_textview_size"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <android.support.v7.widget.RecyclerView
        style="@style/RecyclerView_Style"
        android:id="@+id/smsRecyclerview"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/smsInstruction"
        android:layout_above="@id/invitePlayerSms">
    </android.support.v7.widget.RecyclerView>

    <TextView
        style="@style/Textview_As_A_Button_General_Green"
        android:text="@string/invite_player"
        android:id="@+id/invitePlayerSms"
        android:visibility="visible"
        android:onClick="InvitePlayer"/>
</RelativeLayout>